# example

./: .devcontainer.json  .gitignore  .mxproject  CMakeLists.txt  Jenkinsfile  Makefile  README.md  STM32F030R8TX_FLASH.ld  STM32F103RBTx_FLASH.ld  blinky2.ioc  boardtest.ioc  docker-compose.yml  gdb_server_commands.txt  linux_make_gnu_arm_demo.code-workspace  main.c  mkdocs.yml  notes
.axem/: descriptor.json  dev_env_descriptor.json
.axem/DEPLOY/: deploy.sh
.axem/TEST/: unit_test.sh
.devcontainer/: devcontainer.json  docker-compose.yml
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
DEBUG/: debug.sh
EWARM/: Project.eww  boardtest.ewd  boardtest.ewp  stm32f103xb_flash.icf  stm32f103xb_sram.icf
INFRASTRUCTURE/: descriptor.json
INFRASTRUCTURE/DEBUG/: debug.sh
INFRASTRUCTURE/DEPLOY/: deploy.sh
Src/: main.c
TEST/: unit_test.sh
app/app/src/: sum.d
app/src/: demo.c  demo.h  sum.c  sum.h
app/test/: Makefile  demo_tests  t0_tests
app/test/mocks/: stm32f1xx_hal_gpioMock.cpp  stm32f1xx_hal_timMock.cpp
app/test/objs/mocks/: FakeRandomMinute.d  FakeTimeService.d  FakeTimeServiceTest.d  LightControllerSpy.d  LightControllerTestSpy.d
app/test/objs/src/HomeAutomation/: LightScheduler.d  RandomMinute.d
app/test/objs/tests/: AllTests.d  sumTest.d
app/test/objs/tests/HomeAutomation/: LightSchedulerRandomizeTest.d  LightSchedulerTest.d  RandomMinuteTest.d
app/test/tests/: demoTest.cpp  sumTest.cpp
axem/: descriptor.json  readme.md
axem/DEBUG/: debug.sh
axem/DEPLOY/: Dockerfile  deploy.sh
axem/TEST/: Dockerfile  unit_test.sh
cmake/: toolchain-arm-none-eabi.cmake
docs/: cli_usage.md  create_new_dev_env.md  dev_env.md  index.md  led_blinking.md  preparations.md  vscode_integration_guide.md
docs/stylesheets/: extra.css  scheme.css
